--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>html2pdf</artifactId>
-            <version>${itext.version}</version>
+            <version>2.1.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
